include $(top_srcdir)/common.mk

SUBDIRS = .

include_HEADERS = \
	meta-config.h \
	version.h \
	for.h \
	comparison.h \
	noncopyable.h \
	mandatory.h \
	byteorder.h \
	pointers.h \
	nullptr.h \
	condition.h \
	typelist.h \
	detail/dynamic_for.tcc \
	detail/static_for.tcc \
	detail/dual_operators.tcc \
	detail/chain_helper.tcc \
	detail/typelist.h \
	detail/classlist.h \
	detail/unique_list.h \
	detail/list_revert.h \
	detail/list_prepend_unique.h \
	detail/list_contains.h \
	detail/list_append_unique.h \
	detail/list_append.h \
	detail/list_prepend.h
